new proj/src/objects/SVMXC_Timesheet__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Admin_Functions__c</fullName>
        <description>Formula that determines if a user can see the review timesheet toolbar</description>
        <formula>if(contains( FST_Lead_ID__c ,$User.Id),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allow Admin Functions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Download_to_iPad__c</fullName>
        <formula>If (CONTAINS(  Related_User__c  , $User.Id ) &amp;&amp; ( End_Date__c &gt;= TODAY()-15), 1, 0)</formula>
        <label>Download to iPad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EditTimeEntryValid__c</fullName>
        <formula>if((End_Date__c &gt;= Today() &amp;&amp; Start_Date__c&lt;= Today()), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EditTimeEntryValid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FST_Lead_ID__c</fullName>
        <description>Returns the user ID of the technician&apos;s manager.  Used to control visibility of the Timesheet Review toolbar</description>
        <formula>IF( isblank( Technician__r.SVMXC__Salesforce_User__c ),&quot;NA&quot;,  Technician__r.SVMXC__Salesforce_User__r.Manager.Id)</formula>
        <label>FST Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DS_Download_to_Mobile__c</fullName>
        <formula>AND(
  OR( 
    AND( YEAR( Start_Date__c ) = YEAR( TODAY() ), MONTH( Start_Date__c ) &lt;= (MONTH( TODAY() ) + 1) )
    ,
    AND( YEAR( Start_Date__c ) = (YEAR( TODAY() ) - 1), MONTH( Start_Date__c ) &gt;= MONTH( TODAY() ) )
  )
  ,
  AND(
  NOT(ISBLANK($Setup.GE_DS_Tech_Assignment__c.GE_DS_Technician_ID__c)),
  $Setup.GE_DS_Tech_Assignment__c.GE_DS_Technician_ID__c = Technician__r.Id)
)</formula>
        <label>Download to Mobile?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_DS_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_DS_Prior_Status__c</fullName>
        <label>Prior Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_DS_Total_Overtime__c</fullName>
        <description>Tracks total overtime on timesheet.</description>
        <label>Total Overtime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_DS_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month_Driven__c</fullName>
        <formula>TEXT(YEAR(Start_Date__c )) &amp; if( LEN(TEXT(Month(Start_Date__c ))) =1,&quot;0&quot;&amp; Text(Month(Start_Date__c )),Text(Month(Start_Date__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Driven</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <formula>Technician__r.SVMXC__Salesforce_User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed_by_FST_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>FST Lead checks the box after completing the timesheet review at the end of the pay period</inlineHelpText>
        <label>Reviewed by FST Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technician_Active__c</fullName>
        <formula>if( Technician__r.SVMXC__Active__c = TRUE, &quot;Y&quot;, &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technician Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_ID__c</fullName>
        <description>Reflects the Unique ID required by Runzheimer reports</description>
        <formula>Technician__r.GE_SM_HQ_SSO_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technician ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Timesheets</relationshipLabel>
        <relationshipName>Timesheets_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Billable_On_Site_Time__c</fullName>
        <description>Reflects the total billable time that is spent on site at a location</description>
        <label>Total Billable On-Site Time</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Travel_Time__c</fullName>
        <description>Reflects the total travel time for this time period that is flagged as billable</description>
        <label>Total Billable Travel Time</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Miles_Driven__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total of all miles reported</description>
        <label>Total Miles Driven</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Nonbillable_Hours__c</fullName>
        <formula>Total_Hours__c  -  Total_Billable_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Nonbillable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Nonbillable_On_Site_time__c</fullName>
        <description>Reflects the total number of hours in this time period that were spent on-site, but were not billable</description>
        <label>Total Nonbillable On-Site time</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Nonbillable_Travel_Time__c</fullName>
        <description>Reflects the total travel time for this time period that is not flagged as billable</description>
        <label>Total Nonbillable Travel Time</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Off__c</fullName>
        <description>Total hours recorded for sick or vacation time</description>
        <label>Total Time Off</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Worked__c</fullName>
        <description>Reflects the total number of nonbillable time that is not vacation or sick time</description>
        <label>Total Time Worked</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utilization__c</fullName>
        <formula>IF (Total_Hours__c &gt; 0 , Total_Billable_Hours__c  /  Total_Hours__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Timesheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Technician__c</columns>
        <columns>Total_Time_Worked__c</columns>
        <columns>Total_Miles_Driven__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2012</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SANDIP_AL_All</fullName>
        <booleanFilter>1 AND (2 OR 3 or 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Technician__c</columns>
        <columns>Total_Time_Worked__c</columns>
        <columns>Total_Miles_Driven__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2012</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>contains</operation>
            <value>Godo</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>contains</operation>
            <value>Sandip</value>
        </filters>
        <filters>
            <field>Technician__c</field>
            <operation>contains</operation>
            <value>AL Technician</value>
        </filters>
        <label>SANDIP AL All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TS-{0000000000}</displayFormat>
        <label>Timesheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <recordTypes>
        <fullName>AL</fullName>
        <active>true</active>
        <label>AL</label>
    </recordTypes>
    <recordTypes>
        <fullName>D_S</fullName>
        <active>true</active>
        <label>D&amp;S</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>GE_DS_Lock_Submitted_Timesheet</fullName>
        <active>false</active>
        <description>If a Timesheet has been submitted, it is locked to the Technician.</description>
        <errorConditionFormula>($Profile.Name &lt;&gt; &apos;GE_DS_Titanium Dispatcher&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;GE_DS_Titanium Operations Support&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;GE_DS_Titanium Service Manager&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;GE_ES Developer&apos;) &amp;&amp;
(
(TEXT(PRIORVALUE(GE_OG_DS_Status__c)) = &quot;Submitted&quot; ||
TEXT(PRIORVALUE(GE_OG_DS_Status__c)) = &quot;Approved&quot;) &amp;&amp;
((TEXT(GE_OG_DS_Status__c) != &quot;New&quot;) || (TEXT(GE_OG_DS_Status__c) != &quot;&quot;))
)</errorConditionFormula>
        <errorMessage>A Timesheet cannot be edited after it has been submitted.</errorMessage>
    </validationRules>
</CustomObject>